WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100462
[V8] REGRESSION(132540) Assertion failure on V8DOMWrapper::setJSWrapperForDOMNode()
https://bugs.webkit.org/show_bug.cgi?id=100462
Summary
[V8] REGRESSION(132540) Assertion failure on V8DOMWrapper::setJSWrapperForDOM...
Hajime Morrita
Reported
2012-10-25 22:41:44 PDT
We don't need: ASSERT(!node->isActiveNode());
Attachments
Patch
(1.53 KB, patch)
2012-10-25 22:45 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2012-10-25 22:45:53 PDT
Created
attachment 170819
[details]
Patch
Adam Barth
Comment 2
2012-10-26 00:07:18 PDT
Comment on
attachment 170819
[details]
Patch Clearing flags on attachment: 170819 Committed
r132575
: <
http://trac.webkit.org/changeset/132575
>
Adam Barth
Comment 3
2012-10-26 00:07:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug