[V8] REGRESSION(132540) Assertion failure on V8DOMWrapper::setJSWrapperForDOMNode() https://bugs.webkit.org/show_bug.cgi?id=100462

Patch by MORITA Hajime <morrita@google.com> on 2012-10-26
Reviewed by Adam Barth.

Removed the no longer correct assertion statement.

No new tests. Covered by breaking tests.

* bindings/v8/V8DOMWrapper.cpp:
(WebCore::V8DOMWrapper::setJSWrapperForDOMNode):


Canonical link: https://commits.webkit.org/118486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132575 268f45cc-cd09-0410-ab3c-d52691b4dbfc