Source/WebCore/bindings/v8/V8DOMWrapper.cpp
@@ -72,7 +72,6 @@ v8::Persistent<v8::Object> V8DOMWrapper::setJSWrapperForDOMNode(PassRefPtr<Node>
 {
     v8::Persistent<v8::Object> wrapperHandle = v8::Persistent<v8::Object>::New(wrapper);
     ASSERT(maybeDOMWrapper(wrapperHandle));
-    ASSERT(!node->isActiveNode());
     wrapperHandle.SetWrapperClassId(v8DOMSubtreeClassId);
     getDOMNodeMap(isolate).set(node.leakRef(), wrapperHandle);
     return wrapperHandle;
